[gd_scene load_steps=51 format=3 uid="uid://cwan28xx8n1em"]

[ext_resource type="Script" uid="uid://jw0qagp7uwcs" path="res://simple.gd" id="1_68hca"]
[ext_resource type="Texture2D" uid="uid://xrce2wpbk6na" path="res://hutanLite.jpg" id="1_qlnjk"]
[ext_resource type="Texture2D" uid="uid://b1ql0y5mewhdc" path="res://Knight_player/Idle_KG_1.png" id="2_5rh3t"]
[ext_resource type="Texture2D" uid="uid://chackxkb0umi4" path="res://Mushroom/Mushroom with VFX/Mushroom-Idle.png" id="3_68hca"]
[ext_resource type="Texture2D" uid="uid://bfg7yaxlyhfrl" path="res://Mushroom/Mushroom with VFX/Mushroom-Die.png" id="3_y37ej"]
[ext_resource type="Texture2D" uid="uid://dy1s3isc55f4l" path="res://Knight_player/Dying_KG_1.png" id="5_2mt66"]
[ext_resource type="Texture2D" uid="uid://dtmgcfvc8dxuu" path="res://Mushroom/Mushroom with VFX/Mushroom-Hit.png" id="5_av2ex"]
[ext_resource type="PackedScene" uid="uid://403dqet5lkak" path="res://health_bar.tscn" id="5_db8bj"]
[ext_resource type="PackedScene" uid="uid://cdcl40pr7a6xp" path="res://resultText.tscn" id="6_u4emj"]
[ext_resource type="PackedScene" uid="uid://oeq3ln733oo6" path="res://choice.tscn" id="7_uti7t"]
[ext_resource type="Texture2D" uid="uid://bjwpjg7enq6u6" path="res://Knight_player/Hurt_KG_1.png" id="8_ogps2"]
[ext_resource type="AudioStream" uid="uid://dv3bjqcgjnhaw" path="res://Minifantasy_Dungeon_Music/Minifantasy_Dungeon_Music/Music/Goblins_Dance_(Battle).wav" id="12_ogps2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y37ej"]
atlas = ExtResource("3_y37ej")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_leo5e"]
atlas = ExtResource("3_y37ej")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mel07"]
atlas = ExtResource("3_y37ej")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ldq8"]
atlas = ExtResource("3_y37ej")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_06gjw"]
atlas = ExtResource("3_y37ej")
region = Rect2(640, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2l0a"]
atlas = ExtResource("3_y37ej")
region = Rect2(720, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp67h"]
atlas = ExtResource("3_y37ej")
region = Rect2(800, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1he5"]
atlas = ExtResource("3_y37ej")
region = Rect2(880, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6wff"]
atlas = ExtResource("3_y37ej")
region = Rect2(960, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ktgp"]
atlas = ExtResource("3_y37ej")
region = Rect2(1040, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a4uq"]
atlas = ExtResource("3_y37ej")
region = Rect2(1120, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mt66"]
atlas = ExtResource("3_68hca")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_av2ex"]
atlas = ExtResource("3_68hca")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogps2"]
atlas = ExtResource("3_68hca")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7153g"]
atlas = ExtResource("3_68hca")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2nb3"]
atlas = ExtResource("3_68hca")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ims4"]
atlas = ExtResource("3_68hca")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6fod"]
atlas = ExtResource("3_68hca")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j01ck"]
atlas = ExtResource("5_av2ex")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xh21x"]
atlas = ExtResource("5_av2ex")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp0cd"]
atlas = ExtResource("5_av2ex")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_owqhh"]
atlas = ExtResource("5_av2ex")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs78n"]
atlas = ExtResource("5_av2ex")
region = Rect2(320, 0, 80, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_leo5e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y37ej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_leo5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mel07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ldq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06gjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2l0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp67h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1he5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6wff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ktgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a4uq")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mt66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_av2ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogps2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7153g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2nb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ims4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6fod")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j01ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh21x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp0cd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owqhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs78n")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_v3q3o"]
atlas = ExtResource("5_2mt66")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ceyds"]
atlas = ExtResource("5_2mt66")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hokk"]
atlas = ExtResource("5_2mt66")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nssyr"]
atlas = ExtResource("5_2mt66")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5ubb"]
atlas = ExtResource("5_2mt66")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_db8bj"]
atlas = ExtResource("2_5rh3t")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4emj"]
atlas = ExtResource("2_5rh3t")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uti7t"]
atlas = ExtResource("2_5rh3t")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1v2w"]
atlas = ExtResource("2_5rh3t")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvk37"]
atlas = ExtResource("8_ogps2")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t4up"]
atlas = ExtResource("8_ogps2")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dahm"]
atlas = ExtResource("8_ogps2")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rubqu"]
atlas = ExtResource("8_ogps2")
region = Rect2(300, 0, 100, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_y37ej"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3q3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ceyds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hokk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nssyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5ubb")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_db8bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4emj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uti7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1v2w")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvk37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t4up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dahm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rubqu")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}]

[node name="Simple" type="Node"]
script = ExtResource("1_68hca")

[node name="World" type="Node2D" parent="."]

[node name="Backgorund" type="Sprite2D" parent="World"]
position = Vector2(0, 3.8146973e-06)
scale = Vector2(0.2541924, 0.2201087)
texture = ExtResource("1_qlnjk")

[node name="Enemy" type="AnimatedSprite2D" parent="World"]
position = Vector2(76, 2)
sprite_frames = SubResource("SpriteFrames_leo5e")
animation = &"hurt"
autoplay = "default"
frame = 4
frame_progress = 1.0

[node name="Player" type="AnimatedSprite2D" parent="World"]
position = Vector2(-80, 8.999999)
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_y37ej")
autoplay = "default"

[node name="Camera2D" type="Camera2D" parent="World"]
zoom = Vector2(4, 4)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_left = -73.0
offset_top = 56.0
offset_right = 72.0
offset_bottom = 81.0
grow_vertical = 2

[node name="Gunting" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Gunting"

[node name="Batu" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Batu"

[node name="Kertas" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Kertas"

[node name="PlayerHealth" parent="UI" instance=ExtResource("5_db8bj")]
layout_mode = 0
offset_left = -104.0
offset_top = -31.0
offset_right = -56.0
offset_bottom = -24.0

[node name="EnemyHealth" parent="UI" instance=ExtResource("5_db8bj")]
layout_mode = 0
offset_left = 52.0
offset_top = -31.0
offset_right = 100.0
offset_bottom = -24.0

[node name="ResultText" parent="UI" instance=ExtResource("6_u4emj")]
layout_mode = 0
offset_left = -66.0
offset_top = -29.0
offset_right = 68.0
offset_bottom = -6.0
theme_override_colors/font_color = Color(0, 0.8862745, 0.03529412, 1)
text = ""
horizontal_alignment = 1

[node name="PlayerChoice" parent="UI" instance=ExtResource("7_uti7t")]
layout_mode = 0
offset_left = -64.0
offset_top = 0.0
offset_right = -42.0
offset_bottom = 23.0
text = ""

[node name="EnemyChoice" parent="UI" instance=ExtResource("7_uti7t")]
layout_mode = 0
offset_left = 56.0
offset_top = 0.0
offset_right = 78.0
offset_bottom = 23.0
scale = Vector2(-1, 1)
text = ""

[node name="DelayGameOver" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_ogps2")
volume_db = 10.0
autoplay = true

[connection signal="pressed" from="UI/HBoxContainer/Gunting" to="." method="_on_gunting_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/Batu" to="." method="_on_batu_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/Kertas" to="." method="_on_kertas_pressed"]
[connection signal="timeout" from="DelayGameOver" to="." method="_on_delay_game_over_timeout"]
